# openfilter_experiment

./: .gitignore  README.md
.github/workflows/: run_openfilter_pipeline.yml  sonar_analysis.yml
openfilter/: .gitignore  CONTRIBUTING.md  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml
openfilter/docs/: _category_.json  overview.md  your-first-filter.md
openfilter/examples/hello-ocr/: .gitignore  Makefile  README.md  hello.html  hello.mov  pyproject.toml  requirements.txt
openfilter/examples/hello-ocr/filter_hello_ocr/: main.py
openfilter/examples/hello-ocr/results/: pytest-results.xml
openfilter/examples/hello-ocr/test/integration/features/: integration_success.feature  integration_sucess.feature
openfilter/examples/hello-ocr/test/integration/steps/: steps.py
openfilter/examples/hello-ocr/test/integration/tests/: test_pipeline.py
openfilter/examples/hello-world/: .gitignore  Makefile  README.md  benchmark_results.csv  pipeline_runner.py  pyproject.toml  script.py
openfilter/examples/hello-world/filter_license_plate_pipeline_demo/: main.py
openfilter/examples/hello-world/test/integration/features/: ocr_performance.feature  performance.feature
openfilter/examples/hello-world/test/integration/steps/: steps.py
openfilter/examples/hello-world/test/integration/tests/: test_pipeline.py
openfilter/examples/hello-world/test/unit/: test_filter_ocr.py
openfilter/examples/openfilter-heroku-demo/: Aptfile  Makefile  README.md  app.py  requirements.txt
openfilter/examples/openfilter-heroku-demo/demo_filter/: __init__.py  consumer.py  producer.py
openfilter/src/openfilter/: script.py
openfilter/src/openfilter/filter_runtime/: filter.py
openfilter/src/openfilter/filter_runtime/lineage/: openlineage_client.py
openfilter/src/openfilter/output/: ocr_results.json  subject_data.json
openfilter/tests/: test_cli.py  test_filter.py  test_filter_util.py  test_filter_video_in.py  test_filter_video_out.py  test_filters.py  test_frame.py  test_mq.py  test_rolllog.py  test_s3_functions.py  test_zeromq.py
