[project]
name = "openfilter"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = "Apache-2.0"
dependencies = ["openlineage-python (>=1.35.0,<2.0.0)", "opencv-python-headless (==4.10.0.84)", "numpy (==1.26.4)", "easyocr (>=1.7.2,<2.0.0)", "matplotlib (>=3.10.3,<4.0.0)", "pyzmq (>=27.0.0,<28.0.0)", "pytesseract (>=0.3.13,<0.4.0)", "pillow (>=11.3.0,<12.0.0)", "flask (>=3.1.1,<4.0.0)", "psutil (>=7.0.0,<8.0.0)", "python-dotenv (>=1.1.1,<2.0.0)"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfilter*"]


classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "filter-optical-character-recognition==0.1.1",
  "requests==2.32.4",
  "numpy==1.26.4",
  "opencv-python-headless==4.10.0.84",
  "psutil==5.9.8",
  "pyzmq==26.2.0",
  "openlineage-python==1.33.0",
  "easyocr",
  "pytesseract"
]



[tool.distutils.bdist_wheel]
python-tag = "py3"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-bdd = "^8.1.0"
parse = "^1.20.2"
parse-type = "^0.6.4"
gherkin-official = "^29.0.0"
mako = "^1.3.10"

[project.scripts]
openfilter = "openfilter.cli.__main__:main"


[project.optional-dependencies]

dev = [
  "build>=1.2.2",
  "docker==7.1.0",
  "setuptools==72.2.0",
  "twine>=6.1.0,<7",
  "wheel==0.44.0",
  "pytest==8.4.1",
  "jq==1.8.0",
  "pytest-cov==6.0.0",
]

test = [
  "pytest",
  "pytest-bdd",
  "parse",
  "parse-type",
  "gherkin-official",
  "mako"
]

mqtt_out = [
  "paho-mqtt==1.6.1",
  "setuptools==72.2.0",
]

recorder = []

rest = [
  "fastapi==0.89.0",
  "uvicorn==0.20.0",
  "python-multipart==0.0.9",
]

util = []
video = []

video_in = [
  "setuptools==72.2.0",
  "vidgear[core]==0.3.3",
  "boto3>=1.26.0",
]

video_out = [
  "setuptools==72.2.0",
  "vidgear[core]==0.3.3",
]

webvis = [
  "fastapi==0.89.0",
  "uvicorn==0.20.0",
]

all = [
  "setuptools==72.2.0",

  "paho-mqtt==1.6.1",

  "fastapi==0.89.0",
  "uvicorn==0.20.0",
  "python-multipart==0.0.9",

  "google-cloud-monitoring==2.22.2",
  "google-cloud-storage==2.17.0",

  "vidgear[core]==0.3.3",
  "boto3>=1.26.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
